# TypeOff

./: README.md
.github/workflows/: build.yml
apple/: project.yml
apple/Typeoff/: TypeoffKeyboard.entitlements
apple/Typeoff.xcodeproj/: project.pbxproj
apple/Typeoff.xcodeproj/project.xcworkspace/xcuserdata/chenbao.xcuserdatad/: UserInterfaceState.xcuserstate
apple/Typeoff.xcodeproj/xcshareddata/xcschemes/: Typeoff.xcscheme
apple/Typeoff/Resources/WhisperModels/whisper-base/AudioEncoder.mlmodelc/: model.mil  (+1 more)
apple/Typeoff/Sources/App/: NotesView.swift  OnboardingView.swift  PaywallView.swift  ProfileView.swift  SettingsView.swift  TypeoffApp.swift
apple/Typeoff/Sources/Engine/: AudioPreprocessor.swift  AudioRecorder.swift  MelSpectrogram.swift  ModelDownloader.swift  TranscriptionSession.swift  WhisperEngine.swift  WhisperPipeline.swift  WhisperTokenizer.swift
apple/Typeoff/Sources/Keyboard/: Info.plist  KeyboardView.swift  KeyboardViewController.swift
apple/Typeoff/Sources/Store/: StoreManager.swift  TrialManager.swift
apple/Typeoff/Tests/Engine/: AudioPreprocessorTests.swift  MelSpectrogramTests.swift  SilenceDetectorTests.swift  WhisperPipelineTests.swift  WhisperTokenizerTests.swift
rs/: Cargo.toml
rs/src/: audio_filter.rs  config.rs  correction_batch.rs  corrector.rs  fillers.rs  hotkey.rs  lib.rs  main.rs  paster.rs  recorder.rs  streamer.rs  transcriber.rs  vad.rs
rs/src-tauri/: Cargo.toml  tauri.conf.json
rs/src-tauri/capabilities/: default.json
rs/src-tauri/icons/: icon.icns
rs/src-tauri/src/: lib.rs
rs/ui/: index.html  mini.html
(+2 files in other folders)
