[package]
name = "typeoff-app"
version = "0.2.0"
edition = "2021"
description = "Typeoff desktop app — Tauri frontend"

[dependencies]
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
typeoff = { path = "..", features = ["metal", "local-correction"] }
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
typeoff = { path = "..", features = ["cuda"] }

[target.'cfg(target_os = "linux")'.dependencies]
typeoff = { path = "..", features = ["cuda"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
